...

  useEffect(() => {
    dispatch(createLoadAction(baseCurrency));
  }, [baseCurrency]);

  return (
    <View style={styles.root} testID="welcome">
      <HeaderBar
        title={t('home.title')}
        isHeaderShow={false}
        rightContent={
          <TouchableOpacity testID="options_screen_button" onPress={() => push('Options')}>
            <Entypo name="cog" size={32} color="#fff" />
          </TouchableOpacity>
        }
      />
      <KeyboardAwareScrollView testID="home_screen" scrollEnabled behavior="padding">
        <View style={styles.content}>
...
