...
  const [, setScrollEnabled] = useState(false);

  // eslint-disable-next-line no-promise-executor-return
  const sleep = duration => new Promise(resolve => setTimeout(() => resolve(), duration));

  return (
    <View style={styles.root} testID="login_screen">
      <HeaderBar isHeaderShow={false} title={t('login.title')} />
      <KeyboardAwareScrollView
        scrollEnabled
        behavior="padding"
        style={styles.container}
        contentContainerStyle={styles.container}>
...
